# SimpleImageHub

./: .env.docker  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
image_hub/: config.py  main.py  utils.py
image_hub/auth/: auth_scheme.py  dto.py  errors.py  services.py
image_hub/auth/commands/: create_admin.py
image_hub/commands/: create_sample_data.py
image_hub/database/: db_schema.py  models.py  session.py
image_hub/database/commands/: create_db_schema.py  delete_db_schema.py
image_hub/image/: constants.py  dto.py  image_file.py  query.py
resources/: db_schema.pgerd
