[tool.poetry]
name = "simple-image-hub"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.2"}
asyncpg = "^0.30.0"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
ruff = "^0.7.0"
sqlmodel = "^0.0.22"
pydantic-settings = "^2.6.0"
psycopg2 = "^2.9.10"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
